# tre

./: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
doc/: Makefile  Makefile.in
lib/: Makefile  Makefile.am  Makefile.in  approx_match.c  libtre.la  test.c
m4/: Makefile  Makefile.in
po/: Makefile  Makefile.in
src/: Makefile  Makefile.in
tests/: Makefile  Makefile.in
tests/agrep/: Makefile  Makefile.in
utils/: Makefile  Makefile.in
